# piper-plus-ax-infer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
axmodel/ax620e/: piper_plus_npu_opt_decoder_ax620e_u16.axmodel  piper_plus_npu_opt_dp_ax620e_u16.axmodel  piper_plus_npu_opt_emb_lang_ax620e_u16.axmodel  piper_plus_npu_opt_encp_ax620e_u16.axmodel  piper_plus_npu_opt_flow_ax620e_u16.axmodel
axmodel/ax650/: piper_plus_npu_opt_decoder_ax650_u16.axmodel  piper_plus_npu_opt_dp_ax650_u16.axmodel  piper_plus_npu_opt_emb_lang_ax650_u16.axmodel  piper_plus_npu_opt_encp_ax650_u16.axmodel  piper_plus_npu_opt_flow_ax650_u16.axmodel
config/: config.json  tokens.npz
onnx/: piper_plus_npu_opt_decoder.onnx  piper_plus_npu_opt_dp.onnx  piper_plus_npu_opt_emb_lang.onnx  piper_plus_npu_opt_encp.onnx  piper_plus_npu_opt_flow.onnx
scripts/: cpu_alignment.py  plot_stft_eval.py  run_tts_npu.py  run_tts_onnx.py  tts_pipeline.py
